# OpenDevin

./: .gitignore  AXICODER-7B-Q8-GGUF  Mistral-7B-Instruct-v0.2-Q8-GGUF  SOLAR-10B-Instruct-v1-uncensored-GGUF  StarCoder2-7B-GGUF  pyproject.toml  run_flask_app.py
agenthub/monologue_agent/: __init__.py
agenthub/monologue_agent/utils/: memory.py  monologue.py
data/db/: devika.db
debug_directory/747b4994630a41548e2bf6e46d1e9b34/0/: prompt.md  response.md
debug_directory/747b4994630a41548e2bf6e46d1e9b34/1/: prompt.md
frontend/: .env  package-lock.json  package.json
frontend/src/socket/: actions.ts
opendevin/: config.py  plan.py  task.py
opendevin/controller/: agent_controller.py
opendevin/llm/: llm.py
opendevin/observation/: run.py
opendevin/sandbox/: sandbox.py
opendevin/server/: listen.py  session.py
src/: config.py  logger.py  state.py
ui/: package-lock.json  package.json  vite.config.js
ui/src/lib/: actions.js  actions.ts  api.js  store.js
ui/src/lib/components/: BrowserWidget.svelte  ControlPanel.svelte
ui/src/routes/: +page.svelte
